--- a/index.html
+++ b/index.html
@@ -26,11 +26,25 @@
                     <i class="fas fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#portfolio">Portfolio</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">About</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact">Contact</a></li>
-                    </ul>
+                    <ul class="navbar-nav ml-auto">
+					  <li class="nav-item mx-0 mx-lg-1">
+					    <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" 
+						href="#portfolio">Portfolio</a>
+					  </li>
+					  <li class="nav-item mx-0 mx-lg-1">
+					  	<a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" 
+					  	href="#blog">Blog</a>
+					  </li>
+					  
+					  <li class="nav-item mx-0 mx-lg-1">
+					  	<a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" 
+					  	href="#resume">Resume</a>
+					  </li>
+					  <li class="nav-item mx-0 mx-lg-1">
+					  	<a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" 
+					  	href="#connect">Connect Me</a>
+					  </li>
+					</ul>
                 </div>
             </div>
         </nav>
@@ -38,7 +52,7 @@
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="..." />
+                <img class="masthead-avatar mb-5" src="assets/img/avataaars.jpg" alt="..." />
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">Tushar Pasricha</h1>
                 <!-- Icon Divider-->
